# oscal-content

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  README.md  validate.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: content-artifacts.yml  issue-triage.yml  labels.yml
components/xml/: example-component.xml
components/yaml/: example-component.yaml
examples/: README.md
examples/anti-patterns/: README.md  anti-pattern-ap.json
examples/catalog/: basic-catalog.md
examples/trace-a-single-control/: README.md
fedramp.gov/: README.md
fedramp.gov/json/: FedRAMP_HIGH-baseline-resolved-profile_catalog-min.json  FedRAMP_HIGH-baseline-resolved-profile_catalog.json  FedRAMP_HIGH-baseline_profile-min.json  FedRAMP_HIGH-baseline_profile.json  FedRAMP_LI-SaaS-baseline-resolved-profile_catalog-min.json  FedRAMP_LI-SaaS-baseline-resolved-profile_catalog.json  FedRAMP_LI-SaaS-baseline_profile-min.json  FedRAMP_LI-SaaS-baseline_profile.json  FedRAMP_LOW-baseline-resolved-profile_catalog-min.json  FedRAMP_LOW-baseline-resolved-profile_catalog.json  FedRAMP_LOW-baseline_profile-min.json  FedRAMP_LOW-baseline_profile.json  (+4 more)
nist.gov/SP800-53/: README.md
src/: README.md  config
src/examples/srm/OSCALic/: README.md  pyproject.toml
src/examples/srm/OSCALic/src/oscalic/: __init__.py  by_component.py  common.py  component_definition.py  helpers.py  responsibility_sharing.py  set_parameter.py  statement.py  system_security_plan.py  template.py
systems/: README.md
(+370 files in other folders)
