[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oscalic"
version = "0.0.7b"
authors = [
  { name="Chris Compton", email="chris.compton@nist.gov" },
]
description = "A small experiment using Pydantic for OSCAL modeling."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "hatch",
  "pydantic"
]

[project.urls]
"Homepage" = "https://github.com/Compton-NIST/OSCALic"
"Bug Tracker" = "https://github.com/Compton-NIST/OSCALic/issues"